minor styling changes

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 
 <div class="wrapper cf">
     <div class="main">
+        <h3>This is a fluid area</h3>
         <div id="main-nature" is="x-nature"></div>
     </div>
     <div class="sidebar">
+        <h3>This is a fixed width area</h3>
         <div is="x-nature"></div>
     </div>
 </div>
-
+<p>(Resize your window to have this area resized and see responsiveness in the element here)
 <script src="x-tag/x-tag-components.js"></script>
 <script src="x-tag/x-tag-responsive.js"></script>
 <script src="scripts.js"></script>
